--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <base href="/">
   </head>
   <body>
+    <app-component>Loading...</app-component>
     <script src="polyfills.bundle.js"></script>
     <script src="vendor.bundle.js"></script>
     <script src="main.bundle.js"></script>
